# woolf-pythonweb-hw-03

./: Dockerfile  docker-compose.yml  helper.py  http_request.py  index.html  main.py  message.html  pyproject.toml  requirements.txt
storage/: data.json
templates/: read.jinja
