[tool.poetry]
name = "woolf-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = ["Ilya Bondarchuk <cod3provider@gmail.com>"]
readme = "README.md"
packages = [{ include = "woolf-pythonweb-hw-03"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jinja2 = "^3.1.5"
#requires-python = ">=3.13"
#dependencies = [
#    "requests (>=2.32.3,<3.0.0)",
#    "jinja2 (>=3.1.5,<4.0.0)"
#]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
